==> AaronAn58/e-handbook/include/epdif.cpp <==
#include "epdif.h"
#include <Arduino.h>
#include <SPI.h>

EpdIf::EpdIf() {
};

EpdIf::~EpdIf() {
};

int EpdIf::IfInit(void)
{
    pinMode(CS_PIN, OUTPUT);
    pinMode(RST_PIN, OUTPUT);
    pinMode(DC_PIN, OUTPUT);
    pinMode(BUSY_PIN, INPUT);
    SPI.begin();
    SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));
    return 0;
};

void EpdIf::DelayMs(unsigned int delaytime)
{
    delay(delaytime);
};

void EpdIf::DigitalWrite(int pin, int value)
{
    digitalWrite(pin, value);
}

int EpdIf::DigitalRead(int pin)
{
    return digitalRead(pin);
};

void EpdIf::SpiTransfer(unsigned char data)
{
    digitalWrite(CS_PIN, LOW);
    SPI.transfer(data);
    digitalWrite(CS_PIN, HIGH);
};
